把上方導覽列和logo做好

--- a/index.html
+++ b/index.html
@@ -11,13 +11,33 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="ccss/bootstrap-4.5.3-css/bootstrap.min.c">ss
+        <link rel="stylesheet" href="css/bootstrap-4.5.3-css/bootstrap.min.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+        <nav class="navbar fixed-top ">
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col-4"></div>
+            <div class="col">
+                <a class="navword" href="#">LOGIN /</a>
+                <a class="navword" href="#">MEMBER/</a>
+                <a class="navword" href="#">WISHLIST/</a>
+                <a class="navword" href="#">BEG[4]</a>
+            </div>
+        </nav> 
+        <div class="top_logo container ">
+            <div class="row">
+              <div class="col">
+              </div>
+              <div class="col-6">
+                <img class="logo_img" src="img/Logo.png" alt="">
+              </div>
+              <div class="col">
+              </div>
+            </div>
         <script src="" async defer></script>
     </body>
 </html>
