--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar fixed-top ">
             <div class="col"></div>
             <div class="col"></div>
-            <div class="col-4"></div>
+            <div class="col"></div>
             <div class="col">
                 <a class="navword" href="#">LOGIN /</a>
                 <a class="navword" href="#">MEMBER/</a>
@@ -38,6 +38,16 @@
               <div class="col">
               </div>
             </div>
+        <div class="product container">
+            <div class="row">
+                <div class="col"><div class="op"><a href="" class="op_t">TOP</a></div></div>
+                <div class="col"><div class="op"><a href="" class="op_t">TOP</a> </div></div>
+                <div class="col"><div class="op"><a href="" class="op_t">TOP</a></div></div>
+                <div class="col"><div class="op"><a href="" class="op_t">TOP</a></div></div>
+                <div class="col"><div class="op"><a href="" class="op_t">TOP</a></div></div>
+                <div class="col"><div class="op"><a href="" class="op_t">TOP</a></div></div>
+            </div>
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
