商品分類完成

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             </div>
         <div class="product container">
             <div class="row">
-                <div class="col"><div class="op"><a href="" class="op_t">TOP</a></div></div>
-                <div class="col"><div class="op"><a href="" class="op_t">TOP</a> </div></div>
-                <div class="col"><div class="op"><a href="" class="op_t">TOP</a></div></div>
-                <div class="col"><div class="op"><a href="" class="op_t">TOP</a></div></div>
-                <div class="col"><div class="op"><a href="" class="op_t">TOP</a></div></div>
-                <div class="col"><div class="op"><a href="" class="op_t">TOP</a></div></div>
+                <div class="col"><div class="pcb"><a href="" class="pc">TOP</a></div></div>
+                <div class="col"><div class="pcb"><a href="" class="pc">BOTTOM</a></div></div>
+                <div class="col"><div class="pcb"><a href="" class="pc">SWIMWEAR</a></div></div>
+                <div class="col"><div class="pcb"><a href="" class="pc">BEAUTY</a></div></div>
+                <div class="col"><div class="pcb"><a href="" class="pc">KIDS</a></div></div>
+                <div class="col"><div class="pcb"><a href="" class="pc">SHOES</a></div></div>
             </div>
         </div>
         <script src="" async defer></script>
