--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
               <div class="col">
               </div>
             </div>
+        </div>    
         <div class="product container">
             <div class="row">
                 <div class="col"><div class="pcb"><a href="" class="pc">TOP</a></div></div>
@@ -47,6 +48,9 @@
                 <div class="col"><div class="pcb"><a href="" class="pc">KIDS</a></div></div>
                 <div class="col"><div class="pcb"><a href="" class="pc">SHOES</a></div></div>
             </div>
+        </div>
+        <div class="slider container">
+            
         </div>
         <script src="" async defer></script>
     </body>
