--- a/index.html
+++ b/index.html
@@ -49,37 +49,32 @@
                 <div class="col"><div class="pcb"><a href="" class="pc">SHOES</a></div></div>
             </div>
         </div>
-        <div class="slider container">
-            <div class="slides">
-                <!-- radio button -->
-                <input type="radio" name="radio_btn" id="radio1">
-                <input type="radio" name="radio_btn" id="radio2">
-                <input type="radio" name="radio_btn" id="radio3">
-                <!-- slide img -->
-                <div class="slide first">
-                    <img src="img/img_slider_img1.jpg" alt="">
-                </div>
-                <div class="slide">
-                    <img src="img/img_slider_img2.jpg" alt="">
-                </div>
-                <div class="slide">
-                    <img src="img/img_slider_img3.jpg" alt="">
-                </div>
-                <!-- automatic navigation -->
-                <div class="navigation_auto">
-                    <div class="auto_btn1"></div>
-                    <div class="auto_btn2"></div>
-                    <div class="auto_btn3"></div>
-                </div>
-                <!-- manual navigation -->
-                <div class="navigation_manual">
-                    <label for="radio1" class="manual_btn"></label>
-                    <label for="radio2" class="manual_btn"></label>
-                    <label for="radio3" class="manual_btn"></label>
-                </div>
-                <script src="js/slide.js"></script>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="slide d-block w-100" src="img/img_slider_img1.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="slide d-block w-100" src="img/img_slider_img2.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="slide d-block w-100" src="img/img_slider_img3.jpg" alt="Third slide">
+              </div>
             </div>
-        </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         <script src="" async defer></script>
     </body>
 </html>
