--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </script>
       
         </div>
-        <div class="nwe container">
+        <div class="new container">
           <div class="row">
             <div class="col">
               <div class="block">
@@ -131,6 +131,26 @@
           <div class="line"></div>
           <div class="middle-text"><h1 class="mt">LOOKBOOK</h1></div>
           <div class="line"></div>
+        </div>
+        <div class="lookbook container">
+          <div class="row">
+            <div class="col">
+              <img src="img/img_lookbook_img1.jpg" alt="" class="lbp">
+            </div>
+            <div class="col">
+              <img src="img/img_lookbook_img2.jpg" alt="" class="lbp">
+            </div>
+            <div class="col">
+              <img src="img/img_lookbook_img3.png" alt="" class="lbp">
+            </div>
+            <div class="col">
+              <img src="img/img_lookbook_img4.png" alt="" class="lbp">
+            </div>
+          </div>
+          <div class="button">
+            <div class="cho"></div>
+            <div class="cho"></div>
+          </div>
         </div>
         <script src="" async defer></script>
     </body>
